@@ -40,12 +40,5 @@ public interface HTMLParser {
    * @throws InterruptedException
    */
   public DocData parse(DocData docData, String name, Date date, Reader reader, DateFormat dateFormat) throws IOException, InterruptedException;
-  
-  /**
-   * Parse the inputText and return DocData. 
-   * @param inputText the html text to parse.
-   * @see #parse(DocData, String, Date, Reader, DateFormat)
-   */
-  public DocData parse(DocData docData, String name, Date date, StringBuffer inputText, DateFormat dateFormat) throws IOException, InterruptedException;
 
 }
